# clarice

./: CMakeLists.txt  build.sh
core/: main.c
core/backend/: backend.c  backend.h  gl.c  gl.c.backup  gl.h  gl.h.backup
core/common/: data.h  data.h.backup
core/libs/: molson.h
core/renderer/: renderer.c  renderer.c.backup  renderer.h  renderer.h.backup
